# de-platform

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  dev.sh  render.yaml
backend/: README.md  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_content.py  0003_submissions_points.py  0004_orders_entitlements.py  0005_user_profile.py  0006_password_reset.py  0007_notifications.py  0008_interview_restructure.py  0009_interactions.py  0010_interview_type_title.py  0011_knowledge_tree.py  0012_annotations.py  0013_module_access.py  0014_stored_files.py  0015_applications.py  0016_contact_messages.py  0017_record_interview_link.py  0018_message_attachments.py  0019_order_points_delta.py  0020_site_settings.py  0021_order_note.py  0022_conversation_state.py  0023_annotation_quote_backfill.py  0024_email_verification_codes.py  0024_sql_progress.py
backend/app/: main.py  models.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/scripts/: fix_sequences.py  seed.py  seed_sql_bank.py
backend/tests/: conftest.py  test_access.py  test_admin_access.py  test_admin_content.py  test_admin_users.py  test_annotations.py  test_applications.py  test_auth.py  test_content.py  test_files.py  test_interactions.py  test_interview_mine.py  test_knowledge_tree.py  test_llm_factory.py  test_messages.py  test_notifications.py  test_password_reset.py  test_payment.py  test_payment_m5.py  test_points_config.py  test_submission_parse.py  test_submissions.py  test_submissions_async.py  test_users_profile.py
(+162 files in other folders)
